# chameleon-browser

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  Makefile  README.md  build.zig  build.zig.zon  chameleon_benchmark.py  lp_fingerprint_benchmark.py  package-lock.json  tmp_iframe_probe.html
.github/workflows/: build.yml  cla.yml  cloud-build.yml  e2e-integration-test.yml  pypi-publish.yml  python-checks.yml  wpt.yml  zig-fmt.yml
.hive/: issues.jsonl
docs/: fingerprint-audit-report.md
python/: README.md  pyproject.toml
python/chameleon/: __init__.py  browser.py  exceptions.py
python/lightpanda/: __init__.py  exceptions.py
python/tests/: conftest.py  test_browser.py  test_exceptions.py  test_imports.py  test_packaging.py
src/: Config.zig  Notification.zig  Server.zig  Sighandler.zig  crash_handler.zig  datetime.zig  id.zig  lightpanda.zig  main.zig  main_legacy_test.zig  main_snapshot_creator.zig  main_wpt.zig  testing.zig
src/browser/: Browser.zig  EventManager.zig  Page.zig  ScriptManager.zig  Session.zig
src/browser/js/: Caller.zig  Context.zig  Env.zig  Isolate.zig  Scheduler.zig  bridge.zig
src/browser/parser/: Parser.zig
src/browser/tests/: crypto.html  range.html
src/browser/tests/canvas/: canvas_rendering_context_2d.html
src/browser/tests/css/: media_query_list.html
src/browser/tests/document/: document.html
src/browser/tests/net/: fetch.html
src/browser/tests/window/: navigator.html  window.html
src/browser/webapi/: AudioContext.zig  Chrome.zig  Console.zig  Document.zig  Element.zig  EventTarget.zig  Location.zig  MediaDevices.zig  Navigator.zig  Notification.zig  Permissions.zig  PluginArray.zig  Range.zig  Scheduler.zig  SpeechSynthesis.zig  SubtleCrypto.zig  WebSocket.zig  Window.zig  global_event_handlers.zig
src/cdp/: cdp.zig  testing.zig
src/cdp/domains/: browser.zig  emulation.zig  network.zig  page.zig  target.zig
src/http/: Client.zig  Http.zig
(+22 files in other folders)
